force-app/main/default/objects/VCR_Code_Mapping__mdt/VCR_Code_Mapping__mdt.object-meta.xml
<CustomObject>
    <label>VCR Code Mapping</label>
    <pluralLabel>VCR Code Mappings</pluralLabel>
</CustomObject>