force-app/main/default/objects/VCR_Code_Mapping__mdt/fields/Monthly_Per_Unit_Revenue__c.field-meta.xml
<CustomField>
    <fullName>Monthly_Per_Unit_Revenue__c</fullName>
    <label>Monthly Per Unit Revenue</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Increase</fullName>
                <default>true</default>
                <label>Increase</label>
            </value>
            <value>
                <fullName>Decrease</fullName>
            </value>
            <value>
                <fullName>Neutral</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>