force-app/main/default/objects/VCR_Code_Mapping__mdt/fields/VCR_Code__c.field-meta.xml
<CustomField>
    <fullName>VCR_Code__c</fullName>
    <label>VCR Code</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>INP</fullName>
                <default>true</default>
                <label>INP</label>
            </value>
            <value>
                <fullName>MSC</fullName>
            </value>
            <value>
                <fullName>RBP</fullName>
            </value>
            <value>
                <fullName>IPI</fullName>
            </value>
            <value>
                <fullName>DIS</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>