force-app/main/default/objects/VCR_Code_Mapping__mdt/fields/Yardage_Impact__c.field-meta.xml
<CustomField>
    <fullName>Yardage_Impact__c</fullName>
    <label>Yardage Impact</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Increase</fullName>
                <default>true</default>
                <label>Increase</label>
            </value>
            <value>
                <fullName>Decrease</fullName>
            </value>
            <value>
                <fullName>Neutral</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>